--- a/index.html
+++ b/index.html
@@ -26,5 +26,5 @@
         <button class="btn btn-danger btn_play" onclick = "play();">Song Name</button>
     </center>
 </body>
-<style src="main.js"></style>
+<script src="main.js"></script>
 </html>
